@@ -1258,7 +1258,7 @@ static void CGORenderQuadricRay(CRay * ray, float *v, float r, float *q)
 
 void CGORenderRay(CGO * I, CRay * ray, float *color, CSetting * set1, CSetting * set2)
 {
-  register float *pc = I->op;
+  register float *pc;
   register int op;
   int vc = 0;
   float linewidth = 1.0F;
@@ -1266,6 +1266,11 @@ void CGORenderRay(CGO * I, CRay * ray, float *color, CSetting * set1, CSetting *
   float lineradius, dotradius, dotwidth;
   float white[] = { 1.0, 1.0, 1.0 };
   float zee[] = { 0.0, 0.0, 1.0 };
+  
+  /* workaround; multi-state ray-trace bug */
+  if (I)
+    pc = I->op;
+  else return;
 
   float *n0 = NULL, *n1 = NULL, *n2 = NULL, *v0 = NULL, *v1 = NULL, *v2 = NULL, *c0 =
     NULL, *c1 = NULL, *c2 = NULL;
