@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2011-01-03 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
+	* Fixed multi-state ray trace bug for CGO objects
+
 2010-10-13 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
 	* Fixed Glutamine label problem in Residue menu; now ALT-Q.
